--- a/src/styles/CareerGps.scss
+++ b/src/styles/CareerGps.scss
@@ -3,8 +3,15 @@
   width: 100%;
   height: 600px;
   overflow: hidden;
-  @media screen and (max-width: 768px) {
+  background-color: var(--awb-color3);
+  @media screen and (max-width: 1199px) {
     height: 400px;
+  }
+  @media screen and (max-width: 767px) {
+    height: 300px;
+  }
+  @media screen and (max-width: 576px) {
+    height: 225px;
   }
 }
 .ot-iframe-controller-wrapper {
